--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     </head>
     <body>
-        
+        <div id="buttons"></div>
+        <div id="giphies"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="assets/javascript/app.js" type="text/javascript"></script>
     </body>
