--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     </head>
     <body>
         <div id="buttons"></div>
+        <div id="add">
+            <form>
+                <label>Add a Toon here:</label><br>
+                <input type="text" id="new-toon"><br>
+                <input type="submit" id="add-toon">
+            </form>
+        </div>
         <div id="giphies"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="assets/javascript/app.js" type="text/javascript"></script>
